--- a/style.css
+++ b/style.css
@@ -61,32 +61,7 @@ h2 {
 }
 
 h3 {
-   padding: 20px;
-  background-color: hsla(57, 96%, 9%, 65%);
-  color: antiquewhite;
-  border-radius: 10px;
-  letter-spacing: 3px;
-}
-
-h4{
-      padding: 20px;
-  background-color: hsla(57, 96%, 9%, 65%);
-  color: antiquewhite;
-  border-radius: 10px;
-  letter-spacing: 3px;
-}
-
-h5{
-      padding: 20px;
-  background-color: hsla(57, 96%, 9%, 65%);
-  color: antiquewhite;
-  border-radius: 10px;
-  letter-spacing: 3px;
-}
-
-h6{
-      padding: 20px;
-  background-color: hsla(57, 96%, 9%, 65%);
+  padding: 20px 0;
   color: antiquewhite;
   border-radius: 10px;
   letter-spacing: 3px;
@@ -146,8 +121,6 @@ a:hover {
   background-color: rgb(0, 22, 5);
   color: aliceblue;
 }
-
-
 
 div {
   max-width: 500px;
