--- a/style.css
+++ b/style.css
@@ -19,6 +19,15 @@ body {
   font-family: "Agdasima", sans-serif;
 }
 
+.dropdown {
+  background-color: #4b4b4b;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
 .bg-img {
   min-height: 100svh;
   background-position: bottom;
