--- a/style-lux.css
+++ b/style-lux.css
@@ -22,3 +22,12 @@ body {
 .dropdown-form {
   margin-right: 15%;
 }
+
+.dropdown {
+  background-color: #4b4b4b;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
