--- a/style-lux.css
+++ b/style-lux.css
@@ -31,3 +31,14 @@ body {
   border: none;
   cursor: pointer;
 }
+
+.bg-img {
+  min-height: 100svh;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  display: grid;
+  place-items: center;
+  background-color: dimgrey;
+}
