added 2 more items to lux-folder + edited lux css

--- a/style-lux.css
+++ b/style-lux.css
@@ -61,6 +61,6 @@ h1 {
 }
 
 #second {
-  background-image: url(./assets/Sona2.jpg);
+  background-image: url(./lux/lux2.jpg);
   background-position: center;
 }
