added h3 in lux css

--- a/style-lux.css
+++ b/style-lux.css
@@ -72,3 +72,10 @@ h2 {
   border-radius: 10px;
   letter-spacing: 3px;
 }
+
+h3 {
+  padding: 20px 0;
+  color: antiquewhite;
+  border-radius: 10px;
+  letter-spacing: 3px;
+}
