--- a/style-lux.css
+++ b/style-lux.css
@@ -93,3 +93,9 @@ code {
   padding: 2px;
   font-size: 105%;
 }
+
+article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
