--- a/style-lux.css
+++ b/style-lux.css
@@ -99,3 +99,14 @@ article {
   justify-content: center;
   align-items: center;
 }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(0, 22, 5);
+  padding: 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
