--- a/style-lux.css
+++ b/style-lux.css
@@ -125,3 +125,14 @@ a {
 a:hover {
   color: gray;
 }
+
+.information {
+  height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(0, 22, 5);
+  color: aliceblue;
+  padding: 20px;
+}
