--- a/style-lux.css
+++ b/style-lux.css
@@ -52,17 +52,29 @@ body {
   background-image: url(./lux/lux-1.jpg);
 }
 
+#second {
+  background-image: url(./lux/lux2.jpg);
+  background-position: center;
+}
+
+#third {
+  background-image: url(./lux/lux3.jpg);
+}
+
+#fourth {
+  background-image: url(./lux/lux4.jpg);
+}
+
+#fifth {
+  background-image: url(./lux/lux5.jpg);
+}
+
 h1 {
   padding: 20px;
   background-color: hsla(57, 96%, 9%, 65%);
   color: antiquewhite;
   border-radius: 10px;
   letter-spacing: 3px;
-}
-
-#second {
-  background-image: url(./lux/lux2.jpg);
-  background-position: center;
 }
 
 h2 {
